[poligon] duplicates + tests

--- a/src/documentation/readme
+++ b/src/documentation/readme
@@ -280,3 +280,6 @@ problem:
 problem:  
 *For a given list A of lists A1,A2,...,AN (Ak could be also a list of 
 lists) return the nested level of given element.*
+* **RemoveDuplicatesFromList** will be solution to the following 
+problem:  
+*Remove duplicates from list.*
